Adding the second collection
